	(CygbuildDefineGlobalCommands): Add RUBYBIN
	(CygbuildInstallFixInterpreterMain): Correct find -type call.
	(CygbuildConfOptionAdjustment): Fix detection of extra configure
	options.
	(CygbuildCygcheckMain): Simplify function.
	(CygbuildDefineGlobalCommands): emove CYGPATH. Not needed.
	(CygbuildAskYes): Fix return status.
	(CygbuildInstallPackageDocs): Handle filenames with spaces.

2008-03-11  Jari Aalto  <jari.aalto@cante.net>

	* etc/lib/cygbuild.pl:
	-- Chnage all open command to 3-parameter form.
	(HELP::Packaging commands): Update
	`readmefix' command documentation.
	(UpdateYears): New.
	(UpdatePackageTags): New.
	(FileWrite): Add binmode. Add debug.

	* etc/template/Makefile.redirect.tmp (EXE): Add missing target ending
	colon.

	* bin/cygbuild.sh: (CygbuildCmdInstallCheckCygpatchDirectory):
	Chnage find(1) call to `CygbuildFindDo'.
	(CygbuildFindDo): Add more ignores. Like temporary,
	monotone VCS and patch reject files.
	(CygbuildCmdInstallCheckFSFaddress): New.
	(CygbuildCmdInstallCheckMain): Use `CygbuildCmdInstallCheckFSFaddress'.
	(CygbuildCmdReadmeFixMain): Completely rewritten.
	(CygbuildCmdFixFilesReadme): New.
	(CygbuildCmdFixFilesOther): New.
	(CygbuildCmdReadmeFixFile): Completely rewritten.
	(CygbuildCmdPerlModuleCall): Renamed. Was `CygbuildCmdReadmeFixFile'.
	(CygbuildCmdFixFilesOther): Convert to recursive search.
	(CygbuildCygcheckLibraryDepSource): Search for getopt. Add
	option --with-filename to grep calls.
	(CygbuildCmdDownloadUpstream): Use default for DIR_CYGPATCH.
	(CygbuildCommandMainCheckSpecial): Move download command here.
	(CygbuildCmdDownloadUpstream): Rewrote.

2008-03-09  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/install-after.sh.tmp: Document new arguments
	to program: PRG and VER.

	* bin/cygbuild.sh: (CygbuildGPGverify): Add to gpg call:
	--no-permission-warning --no-secmem-warning --no-mdc-warning
	(CygbuildCmdConfMain): Remove option -r from autoconf call.
	No such options exists.