@@ -27,6 +27,7 @@
 	(CygbuildDefineGlobalCommands): emove CYGPATH. Not needed.
 	(CygbuildAskYes): Fix return status.
 	(CygbuildInstallPackageDocs): Handle filenames with spaces.
+	(CygbuildMakefileRunInstallCygwinOptions): Fix DOCDIR setting.
 
 2008-03-11  Jari Aalto  <jari.aalto@cante.net>
 
